# lattice

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  clippy.toml  docker-compose.yml  justfile
crates/app/: Cargo.toml
crates/app/src/: context.rs  database.rs  lib.rs  main.rs  uuids.rs
crates/app/src/auth/: errors.rs  mod.rs  models.rs  openbao.rs  repository.rs  service.rs  token.rs
crates/app/src/auth/sql/: create_api_token.sql  find_active_api_token_by_uuid.sql  list_api_tokens_by_tenant.sql  revoke_api_token.sql  touch_api_token_last_used.sql  update_api_token_hash.sql
crates/app/src/cli/: mod.rs
crates/app/src/cli/db/: ensure_app_role.rs  mod.rs
crates/app/src/cli/tenant/: create.rs  mod.rs
crates/app/src/cli/token/: create.rs  list.rs  mod.rs  revoke.rs
crates/app/src/domain/: mod.rs
crates/app/src/domain/carts/: data.rs  errors.rs  mod.rs  models.rs  records.rs  repository.rs  service.rs
crates/app/src/domain/carts/repositories/: carts.rs  items.rs  mod.rs
crates/app/src/domain/carts/sql/: create_cart.sql  create_cart_item.sql  delete_cart.sql  delete_cart_item.sql  get_cart.sql  get_cart_items.sql
crates/app/src/domain/products/: data.rs  errors.rs  mod.rs  models.rs  records.rs  repository.rs  service.rs
crates/app/src/domain/products/sql/: create_product.sql  create_product_detail.sql  delete_product.sql  get_product.sql  list_products.sql  update_product.sql
crates/app/src/domain/promotions/: errors.rs  mod.rs  records.rs  service.rs
crates/app/src/domain/promotions/data/: budgets.rs  discounts.rs  mod.rs  qualification.rs
crates/app/src/domain/promotions/repositories/: mod.rs  promotions.rs  qualifications.rs
crates/app/src/domain/promotions/sql/: create_direct_discount_promotion_detail.sql  create_promotion.sql  create_qualification.sql  create_qualification_rule.sql
crates/app/src/domain/tags/: mod.rs  records.rs  repository.rs  taggable.rs
crates/app/src/domain/tags/sql/: create_taggables.sql  delete_taggables.sql  list_taggable_tag_names.sql  sync_tags.sql
crates/app/src/domain/tenants/: data.rs  mod.rs  models.rs  records.rs  repository.rs  service.rs
crates/app/src/domain/tenants/sql/: create_tenant.sql
crates/app/src/products/: errors.rs  mod.rs  models.rs  repository.rs  service.rs
crates/app/src/products/sql/: create_product.sql  create_product_detail_insert.sql  create_product_insert.sql  delete_product.sql  get_product.sql  get_products.sql  list_products.sql  update_product.sql
crates/app/src/tenants/: errors.rs  mod.rs  models.rs  repository.rs  service.rs
crates/app/src/test/: context.rs  db.rs  helpers.rs  mod.rs
crates/core/: Cargo.toml
crates/core/examples/: basket.rs
crates/core/src/: lib.rs  prelude.rs  utils.rs
crates/core/src/discounts/: mod.rs
crates/core/src/fixtures/: items.rs  mod.rs  products.rs  promotions.rs
crates/core/src/graph/: builder.rs  edge.rs  error.rs  evaluation.rs  mod.rs  node.rs  result.rs
crates/core/src/items/: groups.rs
crates/core/src/promotions/: budget.rs  mod.rs  qualification.rs
crates/core/src/promotions/types/: direct_discount.rs  mix_and_match.rs  mod.rs  positional_discount.rs  tiered_threshold.rs
crates/core/src/receipt/: mod.rs
crates/core/src/solvers/: mod.rs
crates/core/src/solvers/ilp/: mod.rs
crates/core/src/solvers/ilp/promotions/: direct_discount.rs  mix_and_match.rs  mod.rs  positional_discount.rs  tiered_threshold.rs
crates/core/src/tags/: collection.rs  mod.rs  string.rs
crates/core/tests/: budget_constraints.rs  conformance.rs  custom_promotion_extensibility.rs  direct_discount_solver.rs  positional_discount_solver.rs  tiered_threshold_solver.rs
crates/demo/: Cargo.toml  Trunk.toml  app.css  index.html
crates/demo/css/: animations.css  base.css  basket.css  buttons.css  layout.css  tokens.css
crates/demo/src/: basket.rs  estimates.rs  main.rs  products.rs  promotions.rs
crates/demo/src/basket/: dock.rs  line_item.rs  mod.rs  summary.rs
crates/json-api/: Cargo.toml
crates/json-api/src/: config.rs  database.rs  healthcheck.rs  lib.rs  main.rs  router.rs  shutdown.rs  state.rs  tenants.rs  test_helpers.rs  uuids.rs
crates/json-api/src/auth/: errors.rs  middleware.rs  mod.rs  models.rs  repository.rs
crates/json-api/src/auth/sql/: find_tenant_by_token_hash.sql
crates/json-api/src/carts/: errors.rs  mod.rs
crates/json-api/src/carts/handlers/: create.rs  delete.rs  get.rs  mod.rs
crates/json-api/src/carts/items/: mod.rs
crates/json-api/src/config/: auth.rs  db.rs  mod.rs  observability.rs  server.rs
crates/json-api/src/extensions/: depot.rs  mod.rs  point_in_time.rs  result.rs
crates/json-api/src/observability/: init.rs  logging.rs  metrics.rs  mod.rs  otel.rs  profiling.rs  request.rs  settings.rs
crates/json-api/src/observability/request/: mod.rs  parent_context.rs  request_ids.rs  spans.rs
crates/json-api/src/products/: errors.rs  mod.rs  models.rs  repository.rs
crates/json-api/src/products/handlers/: create.rs  delete.rs  get.rs  index.rs  mod.rs  update.rs
crates/json-api/src/products/http/: errors.rs  mod.rs
crates/json-api/src/products/sql/: create_product.sql  delete_product.sql  get_products.sql  update_product.sql
crates/json-api/src/promotions/: errors.rs  mod.rs
crates/json-api/src/promotions/handlers/: create.rs  mod.rs  update.rs
crates/json-api/src/promotions/requests/: budgets.rs  discounts.rs  mod.rs  qualification.rs
crates/json-api/src/tenants/: mod.rs  models.rs  repository.rs
crates/json-api/src/tenants/sql/: create_tenant.sql
crates/php-ext/: Cargo.toml
crates/php-ext/src/: items.rs  lib.rs  money.rs  products.rs  qualification.rs  reference_value.rs
crates/php-ext/src/discounts/: mod.rs  percentages.rs
crates/php-ext/src/promotions/: budgets.rs  direct_discount.rs  interface.rs  mod.rs
crates/php-ext/src/promotions/types/: direct_discount.rs  mix_and_match_discount.rs  positional_discount.rs  tiered_threshold.rs
crates/php-ext/src/receipt/: applications.rs  mod.rs
crates/php-ext/src/stack/: layers.rs  mod.rs
(+167 files in other folders)
