[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/css-build",
    "crates/demo",
    "crates/json-api",
    "crates/php-ext",
]

[workspace.dependencies]
decimal-percentage = "0.1.4"
humanize-duration = "0.0.7"
petgraph = "0.8.3"
rustc-hash = "2.1.1"
rusty-money = "0.5.0"
serde_norway = "0.9.42"
slotmap = "1.1.1"
smallvec = "1.15.1"
testresult = "0.4.1"
thiserror = "2.0.18"
