[package]
name = "lattice-app"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive", "env"] }
dotenvy = "0.15.7"
lattice-json = { path = "../json-api" }
sha2 = "0.10"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.21.0", features = ["v4"] }
