[package]
name = "lattice-app"
version = "0.3.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.60", features = ["derive", "env"] }
dotenvy = "0.15.7"
jiff = { version = "0.2.20", features = ["serde"] }
jiff-sqlx = { version = "0.1.1", features = ["postgres"] }
mockall = "0.14.0"
sha2 = "0.10"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
thiserror.workspace = true
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid.workspace = true
