[package]
name = "lattice-app"
version = "0.3.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22"
clap = { version = "4.5.60", features = ["derive", "env"] }
dotenvy = "0.15.7"
jiff = { version = "0.2.20", features = ["serde"] }
jiff-sqlx = { version = "0.1.1", features = ["postgres"] }
mockall = "0.14.0"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
thiserror.workspace = true
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid.workspace = true
zeroize = "1.8.2"
