[package]
name = "lattice"
version = "0.1.0"
edition = "2024"

[features]
# Default to the minimal bundled MILP solver.
default = ["solver-microlp"]

# Use microlp (bundled) as the MILP solver backend.
solver-microlp = ["good_lp/microlp"]

[dev-dependencies]
anyhow = "1.0.100"
tempfile = "3"
testresult.workspace = true

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
decimal-percentage.workspace = true
good_lp = { version = "1.14.2", default-features = false }
humanize-duration.workspace = true
num-traits = "0.2.19"
petgraph = "0.8.3"
rust_decimal = "1.40.0"
rustc-hash.workspace = true
rusty-money.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_norway.workspace = true
slotmap.workspace = true
smallvec.workspace = true
tabled = "0.20.0"
thiserror.workspace = true

[lints.rust]
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_docs = "warn"
async_fn_in_trait = "allow"

[lints.rustdoc]
broken_intra_doc_links = "warn"
missing_crate_level_docs = "warn"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
must_use_candidate = "allow"
allow_attributes_without_reason = "deny"
allow_attributes = "deny"
dbg_macro = "warn"
exit = "deny"
indexing_slicing = "deny"
infinite_loop = "warn"
let_underscore_must_use = "deny"
map_err_ignore = "deny"
missing_assert_message = "warn"
print_stdout = "warn"
print_stderr = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
string_slice = "warn"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unneeded_field_pattern = "warn"
