[package]
name = "lattice-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
humanize-duration = "0.0.7"
leptos = { version = "0.8.15", features = ["csr"] }
lattice = { path = "../core" }
petgraph.workspace = true
rusty-money.workspace = true
serde_norway.workspace = true
slotmap.workspace = true
web-sys = { version = "0.3.85", features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Performance",
    "Url",
    "Window",
] }
leptos_workers = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[lints.rust]
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_docs = "warn"
async_fn_in_trait = "allow"

[lints.rustdoc]
broken_intra_doc_links = "warn"
missing_crate_level_docs = "warn"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
must_use_candidate = "allow"
allow_attributes_without_reason = "deny"
allow_attributes = "deny"
dbg_macro = "warn"
exit = "deny"
indexing_slicing = "deny"
infinite_loop = "warn"
let_underscore_must_use = "deny"
map_err_ignore = "deny"
missing_assert_message = "warn"
print_stdout = "warn"
print_stderr = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
string_slice = "warn"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unneeded_field_pattern = "warn"
