[package]
name = "lattice-json"
version = "0.3.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.57", features = ["derive", "env"] }
dotenvy = "0.15.7"
salvo = { version = "0.89.1", features = ["affix-state", "catch-panic", "trailing-slash", "oapi"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
thiserror.workspace = true
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
uuid = { version = "1.21.0", features = ["serde", "v7"] }
jiff = { version = "0.2.20", features = ["serde"] }
jiff-sqlx = { version = "0.1.1", features = ["postgres"] }
mockall = "0.14.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
testresult.workspace = true

[lints.rust]
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_docs = "warn"
async_fn_in_trait = "allow"

[lints.rustdoc]
broken_intra_doc_links = "warn"
missing_crate_level_docs = "warn"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
must_use_candidate = "allow"
allow_attributes_without_reason = "deny"
allow_attributes = "deny"
dbg_macro = "warn"
exit = "deny"
indexing_slicing = "deny"
infinite_loop = "warn"
let_underscore_must_use = "deny"
map_err_ignore = "deny"
missing_assert_message = "warn"
print_stdout = "warn"
print_stderr = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
string_slice = "warn"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unneeded_field_pattern = "warn"
