[package]
name = "lattice-php-ext"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
testresult.workspace = true

[dependencies]
ext-php-rs = "*"
lattice = { path = "../core" }
rusty-money.workspace = true
testresult.workspace = true
thiserror.workspace = true

[profile.release]
strip = "debuginfo"
