[package]
name = "lattice-php-ext"
version = "0.3.0"
edition = "2024"

[lib]
name = "lattice"
crate-type = ["cdylib"]
doc = false

[dev-dependencies]
testresult.workspace = true

[dependencies]
decimal-percentage.workspace = true
ext-php-rs = "0.15.6"
lattice = { path = "../core" }
rusty-money.workspace = true
smallvec.workspace = true
slotmap.workspace = true
testresult.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(php82)"] }
